@@ -465,6 +465,13 @@ AT_CHECK([AS_ECHO_N(["FIG_FILE_TOP
 	| fig2dev -L box], 0, ignore)
 AT_CLEANUP
 
+AT_SETUP([reject negative font size, ticket #86])
+AT_KEYWORDS([read.c])
+AT_CHECK([AS_ECHO(["2 4 7 0 4 0 -116 0 4 9 3585 6974 3 2"]) | fig2dev -L epic
+], 1, ignore, [Invalid text object.
+])
+AT_CLEANUP
+
 AT_BANNER([Dynamically allocate picture file name.])
 
 AT_SETUP([prepend fig file path to picture file name])
